Added some CSS to update Recipes
After learning about boxes
margin, padding etc, went ahead
and updated recipe pages to practice

--- a/Foundations/Odin_Recipes/recipes/style.css
+++ b/Foundations/Odin_Recipes/recipes/style.css
@@ -1,22 +1,39 @@
 /* styles.css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 h1 {
     color: blue;
     font: size 40px; ;
+    margin: 16px;
 }
 
 .header {
     text-decoration: underline;
     text-align: center;
+    margin: 30px;
+}
+
+h2  {
+    color: red;
 }
 
 li {
     color: black;
     font-family: 'Courier New', Courier, monospace;
     background-color: yellow;
+    padding: 1px;
+    padding-left: 8px;
+    margin-left: 4px;
 }
 
 img {
     height: 300px;
     width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
